--- a/views/index.templ
+++ b/views/index.templ
@@ -2,7 +2,7 @@ package views
 
 import "github.com/livghit/gophosaurus/types"
 
-templ Hello(dinos []types.Dino) {
+templ DinoCards(dinos []types.Dino) {
 	<style>
 .card {
   display: grid;
