--- a/views/index.templ
+++ b/views/index.templ
@@ -1,30 +1,38 @@
 package views
 
-import "github.com/livghit/gophosaurus/types"
 import "github.com/livghit/gophosaurus/views/partials"
+import "github.com/livghit/gophosaurus/types"
 
-templ DinoCards(dinos []types.Dino) {
+templ Index(dinos []types.Dino) {
 <html data-theme="lofi">
 
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="https://unpkg.com/htmx.org@1.9.12"
+		integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
+		crossorigin="anonymous"></script>
 </head>
-@partials.Navigation()
 <main class="p-5">
-	<div class="grid grid-cols-4 gap-5">
-		for _, dino := range dinos {
-		<div class="card bg-base-100 shadow-xl">
-			<div class="card-body">
-				<h2 class="card-title">{ dino.Name }</h2>
-				<p>{ dino.Description }</p>
-				<div class="card-actions justify-end">
-					<button class="btn btn-primary">Learn More</button>
-				</div>
-			</div>
+	<div class="p-5">
+		<div class="navbar bg-primary flex justify-between text-white rounded-lg">
+			<a class="btn btn-ghost text-xl">Gophosaurus</a>
+			<form>
+				<label class="input input-bordered flex items-center gap-2">
+					<input type="text" name="search" class="grow text-black" placeholder="Search" hx-post="/searchDinos"
+						hx-trigger="input changed delay:500ms, search" hx-target="#dinos" hx-swap="outerHTML"
+						hx-indicator=".htmx-indicator" />
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+						class="w-4 h-4 opacity-70 fill-black text-black">
+						<path fill-rule="evenodd"
+							d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+							clip-rule="evenodd"></path>
+					</svg>
+				</label>
+			</form>
 		</div>
-		}
 	</div>
+	@partials.DinoCard(dinos)
 </main>
 
 </html>
